--- a/css/common.css
+++ b/css/common.css
@@ -172,7 +172,7 @@ body {
 }
 
 /* menu */
-/* .menu {
+.menu {
     color: #fff;
     background-color: #1f212c;
     position: fixed;
@@ -237,7 +237,7 @@ body {
     right: 30px;
     font-size: 50px;
     cursor: pointer;
-} */
+}
 
 /* gotop */
 .gotop {
